Added top-level header to how to

--- a/Src/IntegrationTests/HowTo/HowTo.tt
+++ b/Src/IntegrationTests/HowTo/HowTo.tt
@@ -9,6 +9,8 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Reflection" #>
 <#@ output extension=".md" #>
+# How Tos: Using Clide APIs
+
 <#
     var assemblyFile = this.Host.ResolveParameterValue("TestReport", "VisualStudio", "AssemblyFile");
     if (string.IsNullOrEmpty(assemblyFile))
