Add Burn/Msi and improve installer story
When installing the Clide.Installer nuget package, we now
automatically do the right thing for VSIX, MSI and EXE
installers, including the Clide.vsix payload as necessary
on each, and documenting via a readme the necessary manual
steps to integrate it.

--- a/src/Installers/Clide.Msi/Product.wxs
+++ b/src/Installers/Clide.Msi/Product.wxs
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-	<Product Id="*" Name="Clide" Language="1033" Version="1.0.0.0" Manufacturer="ClariusLabs" UpgradeCode="765BEB60-BBD3-4E8F-8299-F4CA395ED892">
+	<Product Id="*" Name="Clide" Language="1033" Version="$(var.ProductVersion)" Manufacturer="$(var.Manufacturer)" UpgradeCode="765BEB60-BBD3-4E8F-8299-F4CA395ED892">
 		<Package InstallerVersion="405" Compressed="yes" InstallScope="perMachine" InstallPrivileges="elevated" />
 
 		<MajorUpgrade AllowDowngrades="yes" MigrateFeatures="no" />
@@ -10,7 +10,7 @@
 			<ComponentRef Id="Clide" />
 		</Feature>
 
-		<Icon Id="Clide.ico" SourceFile="..\..\icon\Clide.ico" />
+		<Icon Id="Clide.ico" SourceFile="$(var.ProductIcon)" />
 		<Property Id="ARPPRODUCTICON" Value="Clide.ico" />
 	</Product>
 
