--- a/src/Installers/Clide.Lib/Library.wxs
+++ b/src/Installers/Clide.Lib/Library.wxs
@@ -3,7 +3,7 @@
      xmlns:vs="http://schemas.microsoft.com/wix/VSExtension">
 	<Fragment>
 		<Component Id="Clide" Directory="ClideVsixInstallDir">
-			<File Id="Clide.vsix" Source="$(var.Vsix.TargetDir)Clide.vsix">
+			<File Id="Clide.vsix" Source="$(var.Clide.Vsix.TargetDir)Clide.vsix">
 				<vs:VsixPackage	PackageId="Clide" Permanent="no" />
 			</File>
 		</Component>
